# black-scholes

./: .dockerignore  .env.docker  DOCKER.md  Dockerfile.backend  Makefile  README.md  SETUP.md  build.sh  docker-compose.yml
backend/: .env.example  .gitignore  main.py  requirements.txt
backend/app/: cache.py  models.py  visualization.py
cpp/: .gitignore  CMakeLists.txt
cpp/include/: BlackScholes.h
cpp/src/: BlackScholes.cpp  bindings.cpp
docs/: CACHE.md  DOCKER.md  SETUP.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: GreeksDisplay.tsx  HeatmapDisplay.tsx  HeatmapParameters.tsx  NumberInput.tsx  OptionCalculator.tsx  PriceDistributionChart.tsx  ProbabilityDisplay.tsx  ProfitLossChart.tsx  Providers.tsx
frontend/hooks/: useOptionCalculation.ts
